--- a/技术积累/C++/进阶/异常.md
+++ b/技术积累/C++/进阶/异常.md
@@ -1,19 +1,17 @@
-# eception
+# exception
+
 | 关键字 | 特点                                              |
 | ------ | ------------------------------------------------- |
 | try    | 里面的内容表示要使用的代码块，后面可以接多个catch |
 | catch  | 捕获异常，并给程序员提示                          |
 | throw  | 抛出异常                                          |
 
-
 1. 包含头文件 exception.h
 2. 可以自己实现一个异常类，该类继承自exception
 3. 定义what()， 返回一个字符串
 4. 类型匹配原理图：
-![https://images2015.cnblogs.com/blog/610439/201601/610439-20160117105031678-298323359.png](https://images2015.cnblogs.com/blog/610439/201601/610439-20160117105031678-298323359.png)
-
+   ![https://images2015.cnblogs.com/blog/610439/201601/610439-20160117105031678-298323359.png](https://images2015.cnblogs.com/blog/610439/201601/610439-20160117105031678-298323359.png)
 5. c++标准异常类
-  
    | 标准异常类       | 描述                                                   | 头文件    |
    | ---------------- | ------------------------------------------------------ | --------- |
    | exception        | 最通用的异常类，只报告异常的发生而不提供任何额外的信息 | exception |
@@ -85,6 +83,7 @@ int main()
 ```
 
 ## 方式二 针对特定的参数抛出异常
+
 ```cpp
 int Func(int a, int b)
 {
