--- a/技术积累/算法/单目测距/单目测距方法.md
+++ b/技术积累/算法/单目测距/单目测距方法.md
@@ -34,7 +34,7 @@
    $$
 4. 缺点
 
-   ==计算的yaw是图像层面，没有包含无人机高度信息， 当高度升高后，测算的坐标变化不大==
+   <font color = "red"> 计算的yaw是图像层面，没有包含无人机高度信息， 当高度升高后，测算的坐标变化不大  </font>
 
 # 基于上面方法优化
 
